--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,16 +11,45 @@ $primary-light: lighten($primary, 10%);
 $primary-dark: $marian-blue;
 $primary-darker: $royal-blue-traditional;
 
+// New primary palette with numeric suffixes
+$primary-100: lighten($primary, 40%);
+$primary-200: lighten($primary, 30%);
+$primary-300: lighten($primary, 20%);
+$primary-400: lighten($primary, 10%);
+$primary-500: $primary;
+$primary-600: $primary-dark;
+$primary-700: darken($primary-dark, 5%);
+$primary-800: darken($primary-dark, 10%);
+$primary-900: $primary-darker;
+
 // Secondary palette
 $secondary: $mikado-yellow;
 $secondary-light: $gold;
 $secondary-dark: darken($mikado-yellow, 10%);
+
+// New secondary palette with numeric suffixes
+$secondary-100: lighten($secondary, 40%);
+$secondary-200: lighten($secondary, 30%);
+$secondary-300: lighten($secondary, 20%);
+$secondary-400: lighten($secondary, 10%);
+$secondary-500: $secondary;
+$secondary-600: $secondary-dark;
+$secondary-700: darken($secondary-dark, 5%);
+$secondary-800: darken($secondary-dark, 10%);
+$secondary-900: darken($secondary-dark, 15%);
 
 // Semantic colors
 $success: #4caf50;
 $warning: $mikado-yellow;
 $danger: #f44336;
 $info: lighten($polynesian-blue, 15%);
+
+// Semantic colors with numeric suffixes
+$success-500: $success;
+$warning-500: $warning;
+$danger-500: $danger;
+$danger-600: darken($danger, 10%);
+$info-500: $info;
 
 // Grayscale
 $white: #ffffff;
@@ -48,6 +77,13 @@ $bg-dark: $gray-800;
 $bg-primary: $primary;
 $bg-secondary: $secondary;
 $bg-white: $white;
+
+// New background variables (for new variable system)
+$background-primary: $bg-white;
+$background-secondary: $gray-100;
+$background-tertiary: $gray-200;
+$background-hover: $gray-200;
+$background-disabled: $gray-200;
 
 // Border colors
 $border-light: $gray-300;
@@ -103,6 +139,12 @@ $shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06
 $shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 $shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 
+// Box shadows (for new variable system)
+$box-shadow-sm: $shadow-sm;
+$box-shadow-md: $shadow-md;
+$box-shadow-lg: $shadow-lg;
+$box-shadow-xl: $shadow-xl;
+
 // Z-index
 $z-index-dropdown: 1000;
 $z-index-sticky: 1020;
@@ -123,6 +165,7 @@ $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 $breakpoint-xxl: 1400px;
+$breakpoint-tablet: 768px;
 
 // Zone Colors
 $zone-a: #007AC9;
@@ -151,5 +194,4 @@ $dark: $gray-900;
 $blue: $primary;
 $light-gray: $gray-200;
 $light: $gray-100;
-$border-color: $primary;
-$background-primary: $bg-white; 
+$border-color: $primary; 
